# AirSimAirLib

./: .gitmodules  CMakeLists.txt  README.md  generate_AirSimAirLib.sh  replace_strings.py
AirSimAirLib/: CMakeLists.txt
AirSimAirLib/include/AirSimAirLib/api/: ApiProvider.hpp  ApiServerBase.hpp  RpcLibAdaptorsBase.hpp  RpcLibClientBase.hpp  RpcLibServerBase.hpp  VehicleApiBase.hpp  VehicleSimApiBase.hpp  WorldSimApiBase.hpp
AirSimAirLib/include/AirSimAirLib/common/: AirSimSettings.hpp  CancelToken.hpp  Common.hpp  CommonStructs.hpp  DelayLine.hpp  EarthCelestial.hpp  EarthUtils.hpp  FrequencyLimiter.hpp  GaussianMarkov.hpp  ImageCaptureBase.hpp  LogFileWriter.hpp  StateReporter.hpp  StateReporterWrapper.hpp  UpdatableContainer.hpp  UpdatableObject.hpp  VectorMath.hpp  Waiter.hpp  WorkerThread.hpp
AirSimAirLib/include/AirSimAirLib/physics/: Environment.hpp  ExternalPhysicsEngine.hpp  FastPhysicsEngine.hpp  Kinematics.hpp  PhysicsBody.hpp  PhysicsBodyVertex.hpp  PhysicsEngineBase.hpp  PhysicsWorld.hpp  World.hpp
AirSimAirLib/include/AirSimAirLib/safety/: CubeGeoFence.hpp  IGeoFence.hpp  ObstacleMap.hpp  SafetyEval.hpp  SphereGeoFence.hpp
AirSimAirLib/include/AirSimAirLib/sensors/: SensorBase.hpp  SensorCollection.hpp  SensorFactory.hpp
AirSimAirLib/include/AirSimAirLib/sensors/barometer/: BarometerBase.hpp  BarometerSimple.hpp  BarometerSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/sensors/distance/: DistanceBase.hpp  DistanceSimple.hpp  DistanceSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/sensors/gps/: GpsBase.hpp  GpsSimple.hpp  GpsSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/sensors/imu/: ImuBase.hpp  ImuSimple.hpp  ImuSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/sensors/lidar/: LidarBase.hpp  LidarSimple.hpp  LidarSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/sensors/magnetometer/: MagnetometerBase.hpp  MagnetometerSimple.hpp  MagnetometerSimpleParams.hpp
AirSimAirLib/include/AirSimAirLib/vehicles/car/: CarApiFactory.hpp
AirSimAirLib/include/AirSimAirLib/vehicles/car/api/: CarApiBase.hpp  CarRpcLibAdaptors.hpp  CarRpcLibClient.hpp  CarRpcLibServer.hpp
AirSimAirLib/include/AirSimAirLib/vehicles/car/firmwares/ardurover/: ArduRoverApi.hpp
AirSimAirLib/include/AirSimAirLib/vehicles/multirotor/: MultiRotorParams.hpp  MultiRotorParamsFactory.hpp  MultiRotorPhysicsBody.hpp  RotorActuator.hpp  RotorParams.hpp
AirSimAirLib/include/AirSimAirLib/vehicles/multirotor/api/: MultirotorApiBase.hpp  MultirotorCommon.hpp  MultirotorRpcLibAdaptors.hpp  MultirotorRpcLibClient.hpp  MultirotorRpcLibServer.hpp
AirSimAirLib/src/api/: RpcLibClientBase.cpp  RpcLibServerBase.cpp
AirSimAirLib/src/common/common_utils/: FileSystem.cpp
AirSimAirLib/src/safety/: ObstacleMap.cpp  SafetyEval.cpp
AirSimAirLib/src/vehicles/car/api/: CarRpcLibClient.cpp  CarRpcLibServer.cpp
AirSimAirLib/src/vehicles/multirotor/api/: MultirotorApiBase.cpp  MultirotorRpcLibClient.cpp  MultirotorRpcLibServer.cpp
AirSimAirLib_example/: CMakeLists.txt  example.cpp
(+18 files in other folders)
